fix/Home button wrong wrap

--- a/frontend/src/Components/Link/Link.module.scss
+++ b/frontend/src/Components/Link/Link.module.scss
@@ -9,9 +9,10 @@
 }
 
 .Action {
+  display: block;
+  text-align: center;
   font-size: 1.8rem;
   padding: 0.5em 1em;
-  height: 2.2em;
 }
 
 .Back {
