--- a/frontend/src/Home/Home.module.scss
+++ b/frontend/src/Home/Home.module.scss
@@ -27,5 +27,9 @@
 .Container p {
   font-size: 1.2rem;
   line-height: 1.2em;
-  margin-bottom: 3rem;
+}
+
+.LinkWrapper {
+  display: flex;
+  margin: 0;
 }
